Remain : Ranges + Notifications + synchronization